# Python-Fastapi-Blog

./: README.md  pyproject.toml  start.sh
app/: main.py
app/core/: config.py
app/db/: mongodb.py  redis.py
app/middlewares/: auth.py
app/routes/: post.py
app/services/: post.py  user.py
