[tool.poetry]
name = "python-fastapi-blog"
version = "0.1.0"
description = "A Blog API With Python and Fasatpi"
authors = ["Solomon Olatunji <realsolomon01@outlook.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.5.2"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
idna = "3.6"
sniffio = "1.3.0"
typing-extensions = "4.9.0"
annotated-types = "0.6.0"
anyio = "3.7.1"
pydantic-core = "2.14.5"
python-dotenv = "1.0.0"
starlette = "0.27.0"
uvicorn = "^0.24.0.post1"
bson = "^0.5.10"
motor = "^3.3.2"
pymongo = "^4.6.1"
six = "^1.16.0"
click = "^8.1.7"
h11 = "^0.14.0"
dnspython = "^2.4.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
black = "^23.12.0"
redis = "^5.0.1"
sse-starlette = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
